[gd_scene load_steps=16 format=3 uid="uid://bjt88c1jqpcsk"]

[ext_resource type="Script" path="res://Scripts/Tree/tree.gd" id="1_7cisq"]
[ext_resource type="Texture2D" uid="uid://b74hju4s6ymx3" path="res://assets/Resources/Trees/Tree.png" id="1_x2p2m"]
[ext_resource type="PackedScene" uid="uid://caaregifh3gqa" path="res://Scenes/Tree/objeto_tronco.tscn" id="2_e3k0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpyh2"]
size = Vector2(146.563, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h8un"]
atlas = ExtResource("1_x2p2m")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab7pq"]
atlas = ExtResource("1_x2p2m")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu3vr"]
atlas = ExtResource("1_x2p2m")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffex4"]
atlas = ExtResource("1_x2p2m")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgmos"]
atlas = ExtResource("1_x2p2m")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hehj5"]
atlas = ExtResource("1_x2p2m")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_erlpx"]
atlas = ExtResource("1_x2p2m")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywmuc"]
atlas = ExtResource("1_x2p2m")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_t22dq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h8un")
}],
"loop": true,
"name": &"TreeChopped",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab7pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu3vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffex4")
}],
"loop": true,
"name": &"TreeHit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgmos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hehj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erlpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywmuc")
}],
"loop": true,
"name": &"TreeStay",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvusy"]
size = Vector2(32, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odtsd"]
size = Vector2(38, 26)

[node name="Tree" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_7cisq")
Tronco = ExtResource("2_e3k0w")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="SpawnTronco" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 68)
shape = SubResource("RectangleShape2D_qpyh2")
debug_color = Color(0, 1, 0.670588, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t22dq")
animation = &"TreeHit"

[node name="TreeRespawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTalarArbol" type="Timer" parent="."]
wait_time = 2.0

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_mask = 2
gravity_scale = 0.0

[node name="RigidCollisionTree" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, 68)
shape = SubResource("RectangleShape2D_kvusy")
debug_color = Color(0.846322, 0.326808, 0.494536, 0.42)

[node name="ColisionTalar" type="CollisionShape2D" parent="."]
position = Vector2(0, 68)
shape = SubResource("RectangleShape2D_odtsd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="TreeRespawn" to="." method="_on_tree_respawn_timeout"]
[connection signal="timeout" from="TimerTalarArbol" to="." method="_on_timer_talar_arbol_timeout"]
